# SofaGLFW

.github/workflows/: ci.yml
SofaGLFW/: CMakeLists.txt  SofaGLFWConfig.cmake.in
SofaGLFW/src/SofaGLFW/: BaseGUIEngine.h  NullGUIEngine.cpp  NullGUIEngine.h  SofaGLFWBaseGUI.cpp  SofaGLFWBaseGUI.h  SofaGLFWGUI.cpp  SofaGLFWMouseManager.h  SofaGLFWWindow.cpp  SofaGLFWWindow.h  config.h.in  initSofaGLFW.cpp
SofaImGui/: CMakeLists.txt
SofaImGui/bindings/: CMakeLists.txt
SofaImGui/bindings/src/: Binding_IOWindow.cpp  Binding_MoveWindow.cpp  Binding_MyRobotWindow.cpp  Binding_MyRobotWindow.h  Binding_PlottingWindow.cpp  Binding_ProgramWindow.cpp  Binding_SimulationState.cpp  Binding_SimulationState.h  Module_SofaImGui.cpp  Module_SofaImGui.h
SofaImGui/cmake/: FindROS.cmake
SofaImGui/example/: mygui.py
SofaImGui/resources/: DejaVuSans.h  GUIColors.h  IconsDejaVuSans.h  ProgramStyle.cpp  Style.cpp  Style.h
SofaImGui/src/SofaImGui/: AppIniFile.cpp  AppIniFile.h  DrivingWindow.cpp  DrivingWindow.h  FooterStatusBar.cpp  FooterStatusBar.h  ImGuiDataWidget.cpp  ImGuiDataWidget.h  ImGuiGUIEngine.cpp  ImGuiGUIEngine.h  Robot.cpp  Robot.h  Utils.cpp  Utils.h  Workbench.cpp  Workbench.h  init.h  initSofaImGui.cpp
SofaImGui/src/SofaImGui/menus/: FileMenu.cpp  FileMenu.h  ViewMenu.cpp  ViewMenu.h
SofaImGui/src/SofaImGui/models/: GUIData.h  KinematicsController.cpp  KinematicsController.h  Program.cpp  Program.h  SimulationState.cpp  SimulationState.h  Track.cpp  Track.h  Trajectory.h  View.cpp  View.h
SofaImGui/src/SofaImGui/models/actions/: Action.cpp  Action.h  Move.cpp  Move.h  Pick.cpp  Pick.h  StartMove.cpp  StartMove.h  Wait.cpp  Wait.h
SofaImGui/src/SofaImGui/models/actions/views/: MoveView.cpp  PickView.cpp  StartMoveView.cpp  WaitView.cpp
SofaImGui/src/SofaImGui/models/guidata/: ActuatorGUIData.h  EffectorGUIData.cpp  EffectorGUIData.h  GUIData.h  GUIDataManager.cpp  GUIDataManager.h  KinematicsGUIDataManager.cpp  KinematicsGUIDataManager.h
SofaImGui/src/SofaImGui/models/modifiers/: Modifier.cpp  Modifier.h  Repeat.cpp  Repeat.h
SofaImGui/src/SofaImGui/models/modifiers/views/: RepeatView.cpp
SofaImGui/src/SofaImGui/widgets/: BoundingBoxWidget.h  Buttons.cpp  Buttons.h  FrameGizmo.h  Gizmos.cpp  Gizmos.h  ImGuiDataWidget.cpp  ImGuiDataWidget.h  IntWidget.h  LinearSpringWidget.h  MaterialWidget.cpp  MovePad.cpp  MovePad.h  RigidMassWidget.h  ScalarWidget.h  VecVectorWidget.h  Widgets.cpp  Widgets.h
SofaImGui/src/SofaImGui/windows/: BaseWindow.cpp  BaseWindow.h  ComponentsWindow.cpp  ComponentsWindow.h  DataMonitorWindow.cpp  DataMonitorWindow.h  IOWindow.cpp  IOWindow.h  LogWindow.cpp  LogWindow.h  MouseManagerWindow.cpp  MouseManagerWindow.h  MoveWindow.cpp  MoveWindow.h  MyRobotWindow.cpp  MyRobotWindow.h  PlottingWindow.cpp  PlottingWindow.h  Plugins.cpp  PluginsWindow.cpp  PluginsWindow.h  ProfilerWindow.cpp  ProfilerWindow.h  ProgramWindow.cpp  ProgramWindow.h  RecordVideoWindow.cpp  RecordVideoWindow.h  SceneGraphWindow.cpp  SceneGraphWindow.h  StateWindow.cpp  StateWindow.h  ViewportWindow.cpp  ViewportWindow.h  WindowsSettingsName.h
SofaImGui/tests/: CMakeLists.txt
SofaImGui/tests/bindings/: SofaImGui_test.cpp  test_imgui_bindings_scene.py
